# project-group19

./: .buildinfo  .gitignore  Analysis (1).ipynb  Analysis.ipynb  LICENSE  Main 2.ipynb  Main.html  Main.ipynb  Makefile  README.html  README.md  _config.yml  _toc.yml  chapters1.html  chapters2.html  chapters3.html  conf.py  environment.yml  genindex.html  loading_file.html  main.ipynb  objects.inv  project-description.html  search.html  searchindex.js  sections1.html  sections2.html  sections3.html  setup.cfg
.doctrees/: Main.doctree  README.doctree  chapters1.doctree  chapters2.doctree  chapters3.doctree  environment.pickle  loading_file.doctree  sections1.doctree  sections2.doctree  sections3.doctree
_build/.doctrees/: Main.doctree  README.doctree  environment.pickle  project-description.doctree
_build/html/: .buildinfo  Main.html  README.html  genindex.html  loading_file.html  objects.inv  project-description.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle
_build/html/_sources/: Main.ipynb  loading_file.ipynb
_build/jupyter_execute/: Main.ipynb  loading_file.ipynb
_sources/: Main.ipynb  README.md  chapters1.ipynb  loading_file.ipynb  sections2.ipynb
tool/: utils.py
tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tool/tests/: __init__.py  test_utils.py
